--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                   <a href="index.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">LOGO</a>
               </li>
               <li>
-                  <a href="signup.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Login / Signup</a>
+                  <a href="signup.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Signup</a>
               </li>
               <li>
-                  <a href="#" class="font-semibold text-orange-50 rounded hover:text-orange-400">Signup</a>
+                  <a href="login.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Login</a>
               </li>
           </ul>
       </nav>
