finished dynamic navBar with userName showing when logged in and functioning LogOut btn, having some trouble changing text color on current link, chose a bigger text-size, shadow and no hover instead

--- a/index.html
+++ b/index.html
@@ -10,20 +10,9 @@
   <!-- Navigation header -->
   <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
       <nav id="nav-bar">
-          <ul class="flex flex-row justify-evenly content-center">
-              <li role="">
-                  <a href="index.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">LOGO</a>
-              </li>
-              <li>
-                  <a href="signup.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Signup</a>
-              </li>
-              <li>
-                  <a href="login.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Login</a>
-              </li>
-          </ul>
+          <!-- js/components/nav-bar.js -->
       </nav>
   </header>
-  <!-- End Navigation header -->
 
   <!-- All posts Feed -->
   <main class="mx-4 my-6 flex flex-col gap-4 justify-start items-center">
