--- a/signup.html
+++ b/signup.html
@@ -11,20 +11,9 @@
   <!-- Navigation header -->
   <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
       <nav id="nav-bar">
-          <ul class="flex flex-row justify-evenly content-center">
-              <li role="">
-                  <a href="index.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">LOGO</a>
-              </li>
-              <li>
-                  <a href="signup.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Signup</a>
-              </li>
-              <li>
-                  <a href="login.html" class="font-semibold text-orange-50 rounded hover:text-orange-400">Login</a>
-              </li>
-          </ul>
+          <!-- js/components/nav-bar.js -->
       </nav>
   </header>
-  <!-- End Navigation header -->
 
   <!-- Intro header -->
   <header class="mx-4 py-4 flex flex-col justify-center items-center">
