--- a/profile.html
+++ b/profile.html
@@ -3,24 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Home page </title>
+    <title> My page </title>
     <script type="module" src="/js/index.js" defer></script>
     <script type="module" src="/js/create-post.js" defer></script>
     <script type="module" src="/js/getPosts.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
   <!-- Navigation header -->
-  <header class="w-full sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
-      <nav id="nav-bar" class="w-full flex justify-center">
+  <header class="w-full mx-auto sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
+      <nav id="nav-bar" class="w-full flex flex-row justify-center">
           <!-- js/components/nav-bar.js -->
       </nav>
   </header>
 
 
   <!-- All posts Feed -->
-  <main class="my-6 flex flex-col gap-4 justify-center items-center posts mx-auto max-w-2xl">
-      <h1 class="my-4 text-2xl">Latest posts</h1>
-
+  <main class="mx-4 my-6 flex flex-col gap-4 items-center  mx-auto max-w-2xl posts">
+      <h1 class="my-4 text-2xl">My posts</h1>
       <!-- Create new post -->
       <section class="p-4 max-w-[480px]">
           <div class="grid grid-cols-4 border-2 border-b-4 rounded">
@@ -47,7 +46,7 @@
       </section>
 
       <section class="flex justify-center items-center">
-          <ul id="allPostItems" role="list" class="p-4 flex flex-col justify-center content-center gap-4 w-8/12 md:w-7/12">
+          <ul id="allPostItems" role="list" class="px-4 flex flex-col gap-4 w-8/12 md:w-7/12">
 
           </ul>
       </section>
