GET user posts and name (owner) success. Changed some styling on postsFeed.

--- a/login.html
+++ b/login.html
@@ -30,8 +30,8 @@
                       <!-- EmailLogin -->
                       <div role="group" class="flex flex-col text-lg text-orange-50 font-mono">
                           <label for="emailLogin" class="sr-only">Email:</label>
-                          <input id="emailLogin" class="p-2 rounded-md bg-neutral-900  placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500"
-                                 type="text" name="emailLogin" placeholder="Your Noroff email">
+                          <input id="emailLogin" class="p-2 rounded-md bg-neutral-900 placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500"
+                                 type="text" name="emailLogin" placeholder="Your Noroff email" autofocus>
                           <div class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600" data-input-error-message>
                               <!-- Message in login.js -->
                           </div>
