--- a/index.html
+++ b/index.html
@@ -6,48 +6,50 @@
     <title> Home page </title>
     <script type="module" src="/js/index.js" defer></script>
     <script type="module" src="/js/create-post.js" defer></script>
-    <script type="module" src="/js/getPosts.js" defer></script>
+    <script type="module" src="/js/get-posts.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
   <!-- Navigation header -->
-  <header class="w-full sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
-      <nav id="nav-bar" class="w-full flex justify-center">
+  <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
+      <nav id="nav-bar">
           <!-- js/components/nav-bar.js -->
       </nav>
   </header>
 
 
   <!-- All posts Feed -->
-  <main class="my-6 flex flex-col gap-4 justify-center items-center posts mx-auto max-w-2xl">
-      <h1 class="my-4 text-2xl">Latest posts</h1>
+  <main class="mx-auto my-6 grid lg:grid-cols-2 gap-y-4 justify-items-center max-w-5xl">
+      <h1 class="my-4 text-2xl lg:col-span-2">Latest posts</h1>
 
       <!-- Create new post -->
-      <section class="p-4 max-w-[480px]">
-          <div class="grid grid-cols-4 border-2 border-b-4 rounded">
-              <div class="p-2">
-                  <img src="./uploads/avatar2.jpg" class="rounded-full w-[3rem] h-[3rem]" alt="Avatar">
+      <section class="min-w-[300px] lg:col-span-1">
+          <div class="p-4 grid grid-cols-1 border-fuchsia-700 border-2 border-b-4 rounded shadow">
+              <div role="img" class="col-span-1">
+                  <img src="./uploads/avatar2.jpg" class="m-2 inline-block rounded-full w-[2rem] h-[2rem]" alt="Avatar">
+                  <span role="presentation" class="font-semibold text-orange-50">frk_Sandkake</span>
               </div>
-              <form id="createPostForm" class="p-2 col-span-4 row-span-4">
-                  <fieldset class="">
-                      <legend>Post something:</legend>
-                      <div class="">
+              <form id="createPostForm" class="col-span-1">
+                  <fieldset class="grid grid-cols-2">
+                      <legend class="pb-4 text-xl font-serif text-cyan-300">Post something:</legend>
+                      <div role="group" class="col-span-2 font-mono">
                           <label for="postTitle" class="sr-only">Title</label>
-                          <input id="postTitle" type="text" placeholder="Write something...">
-                          <div data-input-error-message></div>
+                          <input id="postTitle" type="text" class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500" placeholder="Post title" autofocus>
+                          <div class="p-1 pb-2 text-sm text-red-500" data-input-error-message></div>
                       </div>
-                      <div>
+                      <div role="group" class="col-span-2 font-mono">
                           <label for="postContent" class="sr-only">Post content</label>
-                          <textarea id="postContent" placeholder="Say something here..."></textarea>
-                          <div data-input-error-message></div>
+                          <textarea id="postContent" class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500" placeholder="Message"></textarea>
+                          <div class="p-1 pb-2 text-sm text-red-500" data-input-error-message></div>
                       </div>
                   </fieldset>
-                  <button>Post</button>
+                  <button class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800">Post</button>
               </form>
           </div>
       </section>
 
-      <section class="flex justify-center items-center">
-          <ul id="allPostItems" role="list" class="p-4 flex flex-col justify-center content-center gap-4 w-8/12 md:w-7/12">
+      <!-- All posts section -->
+      <section class="lg:col-span-1">
+          <ul id="allPostItems" role="list" class="grid grid-cols-1 gap-y-4">
 
           </ul>
       </section>
