searchBar is functioning, did finishing touches, have some minor left

--- a/profile.html
+++ b/profile.html
@@ -56,6 +56,11 @@
           </ul>
       </section>
   </main>
-
+  <!-- Footer -->
+  <footer class="w-full py-4 text-center bg-neutral-900">
+      <small class="text-orange-50">
+          &#169; 2022 frk.Sandkake
+      </small>
+  </footer>
   </body>
 </html>
