--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,6 @@
           <!-- js/components/nav-bar.js -->
       </nav>
   </header>
-
   <!-- Intro header -->
   <header class="mx-4 py-4 flex flex-col justify-center items-center">
       <h1 class=" my-4 text-2xl text-orange-50">Welcome to Noroff social network!</h1>
@@ -22,7 +21,7 @@
           Fellow comrades of the Noroff experience, please join!
       </p>
   </header>
-
+  <!-- SignUp -->
   <main class="mx-4 my-8 flex flex-col gap-4 justify-start items-center">
       <div role="none" class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover md:w-9/12">
           <section class="px-2 py-4">
@@ -71,11 +70,14 @@
                       Sign Up
                   </button>
               </form>
-              <!-- End SignUp form -->
-
           </section>
       </div>
   </main>
-
+  <!-- Footer -->
+  <footer class="w-full py-4 text-center bg-neutral-900">
+      <small class="text-orange-50">
+          &#169; 2022 frk.Sandkake
+      </small>
+  </footer>
   </body>
 </html>
