--- a/single-post.html
+++ b/single-post.html
@@ -22,6 +22,11 @@
         <!-- get-post-by-id.js -->
       </section>
   </main>
-
+  <!-- Footer -->
+  <footer class="w-full py-4 text-center bg-neutral-900">
+      <small class="text-orange-50">
+          &#169; 2022 frk.Sandkake
+      </small>
+  </footer>
   </body>
 </html>
