--- a/edit-post.html
+++ b/edit-post.html
@@ -15,8 +15,8 @@
       </nav>
   </header>
 
-  <main class="mx-auto my-6 grid lg:grid-cols-2 gap-y-4 justify-items-center h-screen max-w-5xl">
-      <h1 class="my-4 text-2xl lg:col-span-2">Edit post</h1>
+  <main class="mx-auto my-6 grid lg:grid-cols-2 gap-y-2 justify-items-center h-screen max-w-5xl">
+      <h1 class="text-2xl lg:col-span-2">Edit post</h1>
       <!-- Edit post -->
       <section class="min-w-[300px] lg:col-span-2">
           <div class="p-4 grid grid-cols-1 border-fuchsia-700 border-2 border-b-4 rounded shadow">
@@ -48,6 +48,11 @@
           </div>
       </section>
   </main>
-
+  <!-- Footer -->
+  <footer class="w-full py-4 text-center bg-neutral-900">
+      <small class="text-orange-50">
+          &#169; 2022 frk.Sandkake
+      </small>
+  </footer>
   </body>
 </html>
