--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Home page </title>
     <script type="module" src="/js/index.js" defer></script>
-    <script type="module" src="/js/create-post.js" defer></script>
     <script type="module" src="/js/get-posts.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
@@ -20,51 +19,26 @@
   <main class="mx-auto my-6 grid lg:grid-cols-2 gap-y-4 justify-items-center max-w-5xl">
       <h1 class="my-4 text-2xl lg:col-span-2">Latest posts</h1>
 
-      <!-- Create new post -->
-      <section class="min-w-[300px] lg:col-span-1">
-          <div class="p-4 grid grid-cols-1 border-fuchsia-700 border-2 border-b-4 rounded shadow">
-              <div role="img" class="col-span-1">
-                  <img src="./uploads/avatar2.jpg" class="m-2 inline-block rounded-full w-[2rem] h-[2rem]" alt="Avatar">
-                  <span role="presentation" class="font-semibold text-orange-50">frk_Sandkake</span>
-              </div>
-              <form id="createPostForm" class="col-span-1">
-                  <fieldset class="grid grid-cols-2">
-                      <legend class="pb-4 text-xl font-serif text-cyan-300">Post something:</legend>
-                      <div role="group" class="col-span-2 font-mono">
-                          <label for="postTitle" class="sr-only">Title</label>
-                          <input id="postTitle" type="text" class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
-                                 placeholder="Post title" autofocus>
-                          <div class="p-1 pb-2 text-sm text-red-500" data-input-error-message></div>
-                      </div>
-                      <div role="group" class="col-span-2 font-mono">
-                          <label for="postContent" class="sr-only">Post content</label>
-                          <textarea id="postContent" class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
-                                    placeholder="Message">
-                          </textarea>
-                          <div class="p-1 pb-2 text-sm text-red-500" data-input-error-message></div>
-                      </div>
-                  </fieldset>
-                  <button class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800">
-                      Post
-                  </button>
-              </form>
-          </div>
-      </section>
-
-      <section>
-          <form>
-              <label for="search">Search</label>
-              <input id="search" name="search" placeholder="Search" type="text">
+      <section class="mt-8 lg:col-span-2">
+          <form class="grid grid-cols-1">
+              <label for="search" class="sr-only">Search</label>
+              <input id="search" name="search" placeholder="Search" type="search"
+                     class="col-span-1 w-full text-lg bg-orange-50 border-orange-600 border-2 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500">
           </form>
       </section>
 
       <!-- All posts section -->
-      <section class="lg:col-span-1">
+      <section class="lg:col-span-2">
           <ul id="allPostItems" role="list" class="max-w-[500px] grid grid-cols-1 gap-y-4">
             <!-- get-posts.js -->
           </ul>
       </section>
   </main>
-
+  <!-- Footer -->
+  <footer class="w-full py-4 text-center bg-neutral-900">
+      <small class="text-orange-50">
+          &#169; 2022 frk.Sandkake
+      </small>
+  </footer>
   </body>
 </html>
