--- a/login.html
+++ b/login.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Login to profile </title>
     <script type="module" src="/js/index.js" defer></script>
     <script type="module" src="/js/login.js" defer></script>
-  </head>
-  <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-  <!-- Navigation header -->
-  <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
-      <nav id="nav-bar">
+</head>
+<body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
+<!-- Navigation header -->
+    <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
+        <nav id="nav-bar">
           <!-- js/components/nav-bar.js -->
-      </nav>
-  </header>
-
-  <!-- Intro header -->
-  <header class="mx-4 py-4 flex flex-col justify-center items-center">
-      <h1 class=" my-4 text-2xl text-orange-50">Welcome back fellow Noroff socialites!</h1>
-  </header>
-
-  <main class="mx-4 my-8 flex flex-col gap-4 justify-start items-center">
-      <div role="none" class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover md:w-9/12">
-          <section class="px-2 py-4">
+        </nav>
+    </header>
+    <!-- Intro header -->
+    <header class="mx-4 py-4 flex flex-col justify-center items-center">
+        <h1 class=" my-4 text-2xl text-orange-50">
+            Welcome back fellow Noroff socialites!
+        </h1>
+    </header>
+    <!-- LogIn -->
+    <main class="mx-4 my-8 flex flex-col gap-4 justify-start items-center">
+        <div role="none" class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover md:w-9/12">
+            <section class="px-2 py-4">
               <!-- LogIn form -->
               <form id="loginForm" class="px-4 bg-gray-800 bg-opacity-50 rounded-md sm:w-11/12 md:w-10/12 lg:w-9/12 mx-auto max-w-2xl">
                   <fieldset class="grid grid-cols-1 gap-4 sm:grid-cols-2">
@@ -50,10 +51,14 @@
                       Log In
                   </button>
               </form>
-              <!-- End LogIn form -->
-          </section>
-      </div>
-  </main>
-
-  </body>
+            </section>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer class="w-full py-4 text-center bg-neutral-900">
+        <small class="text-orange-50">
+            &#169; 2022 frk.Sandkake
+        </small>
+    </footer>
+</body>
 </html>
