new try to fix my revert fudge up..

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </button>
                 </div>
                 <ul id="allPostItems" role="list" class="max-w-[640px] grid grid-cols-1 gap-y-4 md:min-w-[640px]"></ul>
-                <div role="none" class="py-4 lg:col-span-2 text-center">
-                    <p data-input-general-message class="text-2xl text-orange-100"></p>
+                <div role="alert" aria-label="all posts general error message" class="py-4 lg:col-span-2 text-center">
+                    <p data-input-general-message class="text-2xl text-orange-100" aria-live="polite"></p>
                 </div>
             </section>
         </main>
