--- a/src/login.html
+++ b/src/login.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Login to profile</title>
-        <script type="module" src="/js/index.js" defer></script>
-        <script type="module" src="/js/login.js" defer></script>
+        <script type="module" src="./js/index.js" defer></script>
+        <script type="module" src="./js/login.js" defer></script>
     </head>
     <body class="bg-gradient-to-br h-screen from-teal-500 to-fuchsia-600 w-full mx-auto">
         <!-- Navigation header (js/components/nav-bar.js) -->
