--- a/src/single-post.html
+++ b/src/single-post.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Single post page</title>
-        <script type="module" src="/js/index.js" defer></script>
-        <script type="module" src="/js/get-post-by-id.js" defer></script>
+        <script type="module" src="./js/index.js" defer></script>
+        <script type="module" src="./js/get-post-by-id.js" defer></script>
     </head>
     <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
         <!-- Navigation header (js/components/nav-bar.js) -->
