successful create post jest-test. Made some enhancements on login-user-test. Changed style on buttons and links.

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                         name="search"
                         placeholder="Search"
                         type="search"
-                        class="col-span-1 w-full text-lg bg-orange-50 border-orange-600 border-2 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
+                        class="col-span-1 w-full text-lg bg-orange-50 border-orange-300 border-2 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
                     />
                 </form>
             </section>
@@ -35,13 +35,13 @@
                 <div role="group" class="grid grid-cols-2">
                     <button
                         id="sortDesc"
-                        class="col-span-1 mx-4 mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800 target:bg-cyan-800"
+                        class="col-span-1 mx-4 mt-2 mb-4 pt-1 pb-2 rounded-md text-lg font-semibold text-pink-300 bg-gray-800 border-b-4 border-pink-300 bg-opacity-80 hover:bg-opacity-100"
                     >
                         Latest
                     </button>
                     <button
                         id="sortAsc"
-                        class="col-span-1 mx-4 mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800 target:bg-cyan-800"
+                        class="col-span-1 mx-4 mt-2 mb-4 pt-1 pb-2 rounded-md text-lg font-semibold text-pink-300 bg-gray-800 border-b-4 border-pink-300 bg-opacity-80 hover:bg-opacity-100"
                     >
                         Oldest
                     </button>
