--- a/src/edit-post.html
+++ b/src/edit-post.html
@@ -18,14 +18,6 @@
             <!-- Edit post -->
             <section class="min-w-[300px] lg:col-span-2">
                 <div class="p-4 grid grid-cols-1 border-fuchsia-700 border-2 border-b-4 rounded shadow">
-                    <div role="img" class="col-span-1">
-                        <img
-                            src="uploads/avatar2.jpg"
-                            class="m-2 inline-block rounded-full w-[2rem] h-[2rem]"
-                            alt="Avatar"
-                        />
-                        <span role="presentation" class="font-semibold text-orange-50">frk_Sandkake</span>
-                    </div>
                     <form id="editPostForm" class="col-span-1">
                         <fieldset class="grid grid-cols-2">
                             <legend class="pb-4 text-xl font-serif text-cyan-300">Edit mode:</legend>
@@ -34,7 +26,7 @@
                                 <input
                                     id="postTitle"
                                     type="text"
-                                    class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
+                                    class="w-full text-sm bg-orange-50 border-orange-300 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
                                     placeholder="Post title"
                                     autofocus
                                 />
@@ -44,7 +36,7 @@
                                 <label for="postContent" class="sr-only">Post content</label>
                                 <textarea
                                     id="postContent"
-                                    class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
+                                    class="w-full text-sm bg-orange-50 border-orange-300 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
                                     placeholder="Message"
                                 >
                                 </textarea>
@@ -52,7 +44,7 @@
                             </div>
                         </fieldset>
                         <button
-                            class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800"
+                            class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md text-lg font-semibold text-pink-300 border-b-2 border-pink-300 bg-gray-800 bg-opacity-80 hover:bg-opacity-100"
                         >
                             Edit
                         </button>
