--- a/src/profile.html
+++ b/src/profile.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My page</title>
         <script type="module" src="./js/index.js" defer></script>
-        <script type="module" src="./js/create-post.js" defer></script>
+        <script type="module" src="js/create-post-page.js" defer></script>
         <script type="module" src="./js/get-delete-user-posts.js" defer></script>
     </head>
     <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
@@ -20,14 +20,6 @@
             <!-- Create new post -->
             <section class="min-w-[300px] lg:col-span-1">
                 <div class="p-4 grid grid-cols-1 border-fuchsia-700 border-2 border-b-4 rounded shadow">
-                    <div role="img" class="col-span-1">
-                        <img
-                            src="uploads/avatar2.jpg"
-                            class="m-2 inline-block rounded-full w-[2rem] h-[2rem]"
-                            alt="Avatar"
-                        />
-                        <span role="presentation" class="font-semibold text-orange-50">frk_Sandkake</span>
-                    </div>
                     <form id="createPostForm" class="col-span-1">
                         <fieldset class="grid grid-cols-2">
                             <legend class="pb-4 text-xl font-serif text-cyan-300">Post something:</legend>
@@ -36,7 +28,7 @@
                                 <input
                                     id="postTitle"
                                     type="text"
-                                    class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
+                                    class="w-full text-sm bg-orange-50 border-orange-300 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
                                     placeholder="Post title"
                                     autofocus
                                 />
@@ -46,7 +38,7 @@
                                 <label for="postContent" class="sr-only">Post content</label>
                                 <textarea
                                     id="postContent"
-                                    class="w-full text-sm bg-orange-50 border-orange-600 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
+                                    class="w-full text-sm bg-orange-50 border-orange-300 rounded-md shadow-lg focus:outline-none focus:ring-indigo-500"
                                     placeholder="Message"
                                 >
                                 </textarea>
@@ -54,7 +46,7 @@
                             </div>
                         </fieldset>
                         <button
-                            class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800"
+                            class="w-full mt-2 mb-4 pt-1 pb-2 rounded-md text-lg font-semibold text-pink-300 border-b-2 border-pink-300 bg-gray-800 bg-opacity-80 hover:bg-opacity-100"
                         >
                             Post
                         </button>
