--- a/src/signup.html
+++ b/src/signup.html
@@ -7,7 +7,7 @@
         <script type="module" src="./js/index.js" defer></script>
         <script type="module" src="./js/signup.js" defer></script>
     </head>
-    <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
+    <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full h-screen mx-auto">
         <!-- Navigation header (js/components/nav-bar.js) -->
         <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
             <nav id="nav-bar"></nav>
@@ -97,7 +97,7 @@
                         </fieldset>
                         <button
                             type="submit"
-                            class="w-1/2 pt-1 pb-2 my-8 rounded-md shadow text-lg font-semibold text-teal-200 bg-indigo-700 bg-opacity-80 hover:bg-opacity-100"
+                            class="w-1/2 pt-1 pb-2 my-8 rounded-md text-lg font-semibold text-orange-300 bg-gray-700 border-b-4 border-orange-300 bg-opacity-80 hover:bg-opacity-100"
                         >
                             Sign Up
                         </button>
