--- a/src/single-post.html
+++ b/src/single-post.html
@@ -7,7 +7,7 @@
         <script type="module" src="./js/index.js" defer></script>
         <script type="module" src="./js/get-post-by-id.js" defer></script>
     </head>
-    <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
+    <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full h-screen mx-auto">
         <!-- Navigation header (js/components/nav-bar.js) -->
         <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
             <nav id="nav-bar"></nav>
